--- a/panda.ipynb
+++ b/panda.ipynb
@@ -3053,7 +3053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3077,6 +3077,303 @@
    "source": [
     "*More exercises to follow soon...*"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3]) \n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3,4,5], ndmin = 2) \n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]\n",
+      "  C_CONTIGUOUS : True\n",
+      "  F_CONTIGUOUS : True\n",
+      "  OWNDATA : True\n",
+      "  WRITEABLE : True\n",
+      "  ALIGNED : True\n",
+      "  WRITEBACKIFCOPY : False\n",
+      "  UPDATEIFCOPY : False\n",
+      "(24,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(24) \n",
+    "print a\n",
+    "print a.flags\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2]\n",
+      "  [ 3  4  5]\n",
+      "  [ 6  7  8]\n",
+      "  [ 9 10 11]]\n",
+      "\n",
+      " [[12 13 14]\n",
+      "  [15 16 17]\n",
+      "  [18 19 20]\n",
+      "  [21 22 23]]]\n",
+      "(2, 4, 3)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'order'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-103-dc143766a4b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'order'"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.reshape(2,4,3) \n",
+    "print b \n",
+    "print b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4 19]\n",
+      " [19 19]\n",
+      " [19 19]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.empty([3,2], dtype = int) \n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.zeros(5) \n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]]\n",
+      "[1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.zeros((2,2))#, dtype = [('x', 'i4'), ('y', 'i4')])  \n",
+    "print x\n",
+    "x = np.ones(5) \n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3]\n",
+    "a = np.asarray(x, dtype = float) \n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H' 'e' 'l' 'l' 'o' ' ' 'W' 'o' 'r' 'l' 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'Hello World' \n",
+    "a = np.frombuffer(s, dtype = 'S1') \n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 2. 3. 4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = range(5) \n",
+    "it = iter(list)  \n",
+    "\n",
+    "# use iterator to create ndarray \n",
+    "x = np.fromiter(it, dtype = float) \n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      "[  1.      5.55  123.      0.567  25.532]\n",
+      "\n",
+      "\n",
+      "After rounding:\n",
+      "[  1.   6. 123.   1.  26.]\n",
+      "[  1.    5.6 123.    0.6  25.5]\n",
+      "[  0.  10. 120.   0.  30.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1.0,5.55, 123, 0.567, 25.532]) \n",
+    "\n",
+    "print 'Original array:' \n",
+    "print a \n",
+    "print '\\n'  \n",
+    "\n",
+    "print 'After rounding:' \n",
+    "print np.around(a) \n",
+    "print np.around(a, decimals = 1) \n",
+    "print np.around(a, decimals = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
